--- a/frontend/act.html
+++ b/frontend/act.html
@@ -16,35 +16,52 @@
         </div>
     </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            // Fetch Act details and Compliance list
-            const actId = 2;
-            fetch(`http://localhost:8080/act/${actId}`)
-                .then(response => response.json())
-                .then(data => {
-                    // Update Act details
-                    const actSection = document.getElementById('act-section');
-                    actSection.innerHTML = `
-                       <div> <h2><b>Act:</b></h2></div>
-                       <div class="data1"><p>${data.title}</p>
-                        <p>${data.description}</p></div>
-                    `;
 
-                    // Update Compliance list
-                    const complianceList = document.getElementById('compliance-list');
-                    complianceList.innerHTML = `<h1>Compliance List</h1>`;
-                    data.complianceSet.forEach(compliance => {
-                        complianceList.innerHTML += `
-                            <div class="compliance-item">
-                                ${compliance.description.split('\n')[0]} <!-- Display only the first line -->
-                                <button class="description-btn" onclick="window.location.href='desp.html'">Description</button>
-                            </div>
-                        `;
-                    });
-                })
-                .catch(error => console.error('Error:', error));
-        });
+    
+    <script>
+       document.addEventListener("DOMContentLoaded", function () {
+    // Fetch Act details and Compliance list
+    const actId = 2;
+    const complianceList = document.getElementById('compliance-list');
+
+    fetch(`http://localhost:8080/act/${actId}`)
+        .then(response => response.json())
+        .then(data => {
+            // Update Act details
+            const actSection = document.getElementById('act-section');
+            actSection.innerHTML = `
+                <h2>Act:</h2>
+                <p>${data.title}</p>
+                <p>${data.description}</p>
+            `;
+
+            // Update Compliance list
+            complianceList.innerHTML = `<h1>Compliance List</h1>`;
+            data.complianceSet.forEach(compliance => {
+                const complianceItem = document.createElement('div');
+                complianceItem.classList.add('compliance-item');
+                complianceItem.innerHTML = `
+                    <p>${compliance.description.split('\n')[0]}</p> <!-- Display only the first line -->
+                    <button class="description-btn">Description</button>
+                    <div class="compliance-details" style="display: none;">
+                        <p><strong>Description:</strong> ${compliance.description}</p>
+                        <p><strong>Reference:</strong> ${compliance.reference}</p>
+                        <p><strong>Penalty:</strong> ${compliance.penalty}</p>
+                        <p><strong>Form:</strong> ${compliance.form}</p>
+                    </div>
+                `;
+
+                complianceItem.addEventListener('click', function () {
+                    const detailsSection = complianceItem.querySelector('.compliance-details');
+                    detailsSection.style.display = (detailsSection.style.display === 'none' || detailsSection.style.display === '') ? 'block' : 'none';
+                });
+
+                complianceList.appendChild(complianceItem);
+            });
+        })
+        .catch(error => console.error('Error:', error));
+});
+
     </script>
 </body>
 
