--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,7 +10,7 @@
      
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-   <title>Responsive Regisration Form </title>
+   <title>Register with Nexus</title>
 </head>
 <body>
     <div class="container">
