--- a/frontend/alltenders.html
+++ b/frontend/alltenders.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Tenders</title>
   <link rel="stylesheet" href="alltenders.css">
-  <link rel="shortcut icon" href="logo_compliance_nexus.jpg" type="image/x-icon">
+  <link rel="manifest" href="manifest.json">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
   <div class="container">
