--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPLIANCE-NEXUS </title>
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Slab&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <style>
         body {
             margin: 0;
@@ -83,7 +84,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="make-me-a-simple-logo-similar-hexagonal-to-this-for-my-application-named-compliance-nexus-logo-sh-8332 (1).png" alt="Logo">
+        <img src="favicon.png" alt="Logo">
         <h1>Welcome to Compliance Nexus</h1>
         
         <div class="button-container">
