--- a/frontend/tender.html
+++ b/frontend/tender.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
-    <link rel="stylesheet" href="act.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="tender.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
@@ -154,8 +154,9 @@
 
     <div class="box-container" id="upload-container">
         <!-- Upload Missing Document Heading, Upload Button, and File Input -->
-        <h2 class="upload-heading">Upload Missing Document</h2>
+        <h2 class="upload-heading">Upload Your Document</h2>
         <label for="file-input" id="choose-file-btn">Choose File</label>
+        <input type="file" id="pdf-file-input">
         <input type="file" id="file-input">
         <button id="upload-btn">Upload</button>
     </div>
@@ -170,16 +171,16 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         // Fetch Act details and Compliance list
-        const actId = 252;
+        const actId = 202;
         const complianceList = document.getElementById('compliance-list');
 
-        fetch(`http://localhost:8080/act/${actId}`)
+        fetch(`http://localhost:8080/tender/${actId}`)
             .then(response => response.json())
             .then(data => {
                 // Update Act details
                 const actSection = document.getElementById('act-section');
                 actSection.innerHTML = `
-                    <h2>Act:</h2>
+                    <h2>Tender:</h2>
                     <p>${data.title}</p>
                     <p>${data.description}</p>
                 `;
@@ -212,7 +213,23 @@
 
         // Show Required Documents Button Click Event
         const showDocumentsBtn = document.getElementById('show-documents-btn');
-        const requiredDocumentsTextarea = document.getElementById('required-documents-textarea');
+const requiredDocumentsTextarea = document.getElementById('required-documents-textarea');
+
+showDocumentsBtn.addEventListener('click', function () {
+    // Fetch and display document details based on the Act ID
+    const actId = 202; // You can get the Act ID from your data or any other source
+    
+    // Fetch document details from the backend using the Act ID
+    fetch(`http://localhost:8080/tender/docList/${actId}`)
+        .then(response => response.text())
+        .then(responseText => {
+            // Display the fetched document details in the textarea
+            requiredDocumentsTextarea.value = responseText;
+        })
+        .catch(error => console.error('Error fetching document details:', error));
+});
+
+
 
         showDocumentsBtn.addEventListener('click', function () {
             // Fetch and display document details based on the entered ID
@@ -230,24 +247,61 @@
 
         // Upload Missing Document Button Click Event
         const uploadBtn = document.getElementById('upload-btn');
-        const fileInput = document.getElementById('file-input');
-
-        uploadBtn.addEventListener('click', function () {
-            // Handle the logic to upload the missing document
-            // You can use the fileInput.files[0] to get the selected file
-            // and send it to the server for processing.
-            // Example: const selectedFile = fileInput.files[0];
-        });
-
-        // Upload My Document Button Click Event
-        const uploadMyDocBtn = document.getElementById('upload-my-doc-btn');
+        const pdfFileInput = document.getElementById('pdf-file-input');
         const userInputTextarea = document.getElementById('user-input-textarea');
 
+    uploadBtn.addEventListener('click', function () {
+        // Get the selected PDF file
+        const pdfFile = pdfFileInput.files[0];
+        
+        if (!pdfFile) {
+            alert('Please select a PDF file.');
+            return;
+        }
+
+        // Create a FormData object to send the file
+        const formData = new FormData();
+        formData.append('files', pdfFile);
+
+        // Get the tender ID (replace with your actual logic to get the tender ID)
+        const actId = 202; // Replace with your logic
+
+        // Make a POST request to upload the PDF file
+        fetch(`http://localhost:8080/upload/pdfs/${actId}`, {
+            method: 'POST',
+            body: formData,
+        })
+        .then(response => response.text())
+        .then(responseText => {
+            // Update the textarea with the received response
+            userInputTextarea.value = responseText;
+        })
+        .catch(error => console.error('Error uploading PDF:', error));
+    });
+
+        // Upload My Document Button Click Event
+        // const uploadMyDocBtn = document.getElementById('upload-my-doc-btn');
+        // const userInputTextarea = document.getElementById('user-input-textarea');
+
         uploadMyDocBtn.addEventListener('click', function () {
-            // Handle the logic to upload the user's document
-            // You can use userInputTextarea.value to get the entered text
-            // and send it to the server for processing.
-            // Example: const enteredText = userInputTextarea.value;
+            // Get the user input from the textarea
+            const userPlan = userInputTextarea.value;
+
+            // Fetch the data from the server
+            const actId = 202; // Replace with the actual Act ID
+            fetch(`http://localhost:8080/tender/checkFromPlan/${actId}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(userPlan),
+            })
+            .then(response => response.text())
+            .then(responseText => {
+                // Update the textarea with the received response
+                userInputTextarea.value = responseText;
+            })
+            .catch(error => console.error('Error uploading document:', error));
         });
     });
 </script>
