--- a/frontend/actspage.html
+++ b/frontend/actspage.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Acts and Compliance</title>
   <link rel="stylesheet" href="actspage.css">
-  <link rel="shortcut icon" href="logo_compliance_nexus.jpg" type="image/x-icon">
+  <link rel="manifest" href="manifest.json">   
+   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
   <div class="container">
