--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Login & Signup Form</title>
    <link rel="stylesheet" href="loginStyle.css"> <!-- Link to your CSS file -->
-    
+   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   </head>
   <body>
     <section class="wrapper">
