--- a/frontend/tenderUpload.html
+++ b/frontend/tenderUpload.html
@@ -203,6 +203,7 @@
                         </div>
                         <label for="complianceCount" style="color: #11999E;">Enter the Total number of compliance's:</label>
 <input type="number" id="complianceCount" name="complianceCount" min="1" required>
+<input type="file" id="file-input"><button id="upload-btn">Upload your Document</button>
 <button onclick="generateComplianceSets()">Generate Compliance Sets</button>
 
 <div id="complianceContainer"></div>
